--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,103 @@
-.noty_buttons{text-align:center}.input-buscar{height:34px!important;border-radius:0!important}.box .box-default .box-body{padding-top:15px}.box .box-body{padding-top:15px;padding-bottom:15px}#nprogress .bar{background:red!important}#nprogress .peg{box-shadow:0 0 10px red,0 0 5px red!important}#nprogress .spinner-icon{display:none;visibility:hidden}.pagination{float:right;margin:0;font-size:12px}.loading-spinner{font-size:2.5rem;text-align:center;display:block;margin:20px 0}.title-detalle{font-size:18px!important;font-weight:600}.descripcion-detalle{font-size:16px!important;font-weight:400}.img-producto-detalle{height:160px;margin-bottom:15px}.vs--searchable .vs__dropdown-toggle{border-radius:0!important;height:34px!important;line-height:34px!important}@media (max-width:500px){.btn{width:100%!important;margin:5px 0}}@media (min-width:1000px){.fecha-text{position:absolute;top:-15px;right:-100px;font-size:13px}.fecha-text2{position:absolute;top:-15px;right:80px;font-size:13px}}
+.noty_buttons {
+    text-align: center;
+}
+
+.input-buscar {
+    height: 34px!important;
+    border-radius: 0px!important;
+}
+
+.box .box-default .box-body {
+    padding-top: 15px;
+}
+
+.box .box-body {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+#nprogress .bar {
+    background: red !important;
+}
+
+#nprogress .peg {
+    box-shadow: 0 0 10px red, 0 0 5px red !important;
+}
+
+#nprogress .spinner-icon {
+    display: none;
+    visibility: hidden;
+}
+
+.pagination {
+    float: right;
+    margin: 0px;
+    font-size: 12px;
+}
+
+.loading-spinner {
+    font-size: 2.5rem;
+    text-align: center;
+    display: block;
+    margin: 20px 0px;
+}
+
+.title-detalle {
+    font-size: 18px !important;
+    font-weight: 600;
+}
+
+.descripcion-detalle {
+    font-size: 16px !important;
+    font-weight: 400;
+}
+
+.img-producto-detalle {
+    height: 160px;
+    margin-bottom: 15px;
+}
+
+.vs--searchable .vs__dropdown-toggle {
+    border-radius: 0px !important;
+    height: 34px !important;
+    line-height: 34px !important;
+}
+
+
+.v-money{
+
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+
+@media (max-width: 500px) {
+    .btn {
+        width: 100% !important;
+        margin: 5px 0px;
+    }
+}
+
+@media (min-width: 1000px) {
+    .fecha-text {
+        position: absolute;
+        top: -15px;
+        right: -100px;
+        font-size: 13px;
+    }
+    .fecha-text2 {
+        position: absolute;
+        top: -15px;
+        right: 80px;
+        font-size: 13px;
+    }
+}
